<resources>
    <string name="app_name">App3task</string>

    <string name="label_poi">POI</string>

    <string name="attractions">Attractions</string>
    <string name="dining">Dining</string>
    <string name="education">Education</string>
    <string name="family">Family</string>
    <string name="health">Health</string>
    <string name="office">Office</string>
    <string name="promotions">Promotions</string>
    <string name="radio">Radio</string>
    <string name="recipes">Recipes</string>
    <string name="sports">Sports</string>

    <string name="photo">PHOTO</string>
    <string name="text_size">60dp</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_in_for_button">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="just_sign_in">* Just sign in</string>

    <string name="android">Android</string>
    <string name="number_of_posts">125</string>
    <string name="posts">Posts</string>
    <string name="number_of_followers">20K</string>
    <string name="followers">Followers</string>
    <string name="number_of_following">22</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="directions">Directions</string>
    <string name="call">Call</string>
    <string name="save">Save</string>
    <string name="website">Website</string>

    <string name="label_android_course">Android course</string>
    <string name="certificated">Certificated</string>
    <string name="layouts">Layouts</string>
    <string name="views">Views</string>

    <string name="no_data">PHOTO</string>
    <string name="search_hint">search</string>

    <string name="share">share</string>+
    <string name="bookmark">bookmark</string>
    <string name="favourite">favourite</string>
    <string name="avatar">avatar</string>

    <string name="first_table_layout">First table layout</string>+
    <string name="first_linear_layout">First linear layout</string>
    <string name="second_linear">second linear</string>
    <string name="second_constraint">second constraint</string>

    <string name="second_relative">second relative</string>+
    <string name="third_linear">third linear</string>
    <string name="third_constraint">third constraint</string>
    <string name="third_relative">third relative</string>

    <string name="fourth_linear">fourth linear</string>+
    <string name="fourth_constraint">fourth constraint</string>
    <string name="fourth_relative">fourth relative</string>
    <string name="fifth">Fifth</string>

</resources>