<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    >

    <Button
        android:id="@+id/first_button_table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_table_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/first_button_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_button_table_layout" />

    <Button
        android:id="@+id/second_button_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/second_linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_button_linear_layout" />

    <Button
        android:id="@+id/second_button_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/second_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_button_linear_layout" />

    <Button
        android:id="@+id/second_button_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_relative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_button_constraint_layout" />

    <Button
        android:id="@+id/third_button_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/third_linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_button_relative_layout" />

    <Button
        android:id="@+id/third_button_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_button_linear_layout" />

    <Button
        android:id="@+id/third_button_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_relative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_button_constraint_layout" />

    <Button
        android:id="@+id/fourth_button_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fourth_linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_button_relative_layout"/>

    <Button
        android:id="@+id/fourth_button_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_button_linear_layout" />

    <Button
        android:id="@+id/fourth_button_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth_relative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_button_constraint_layout" />

<Button
    android:id="@+id/fifth_button_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/fifth"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/fourth_button_relative_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>