<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="80dp"
        android:text="@string/photo"
        android:textSize="60sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_photo"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_camera_alt_24" />

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_photo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:text="@string/title" />

    <EditText
        android:id="@+id/edit_text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_title"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:minWidth="100dp"
        android:text="@string/price" />

    <EditText
        android:id="@+id/edit_text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_title"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_toEndOf="@+id/edit_text_price"
        android:drawableRight="@drawable/ic_baseline_location_24"
        android:text="@string/location" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_price"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:text="@string/description" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_description"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:minWidth="100dp"
        android:text="@string/inventory" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_description"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:minWidth="100dp"
        android:text="@string/weight" />

</RelativeLayout>